--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <button class="upfile" id="upfiles" onclick="document.getElementById('upfile').click(); return false;"> click here to upload! 
             </button>
             <input type="file" id="upfile" name="upfile" hidden>
+            <div class="uploadedFiles"></div>
         
 
 
@@ -169,4 +170,5 @@
 
     <script src="photon.js"></script>
 </body>
+
 </html>
