--- a/generate.html
+++ b/generate.html
@@ -17,6 +17,11 @@
 
     </div>
 
+    <div class="loader-container">
+      <div class="loader"></div>
+      <div class="curved-rectangle"></div>
+    </div>
+
     <button class="gen-upfile" id="gen-upfiles"> <p class="starr">★</p> 4.9/5 (40,000+ reviews) 
     </button>
 
@@ -50,3 +55,4 @@
 </body>
 
 </html>
+
