--- a/payway.html
+++ b/payway.html
@@ -10,7 +10,7 @@
     <div class="gen-container">
         <div class="images">
 
-        <img class="sample" src="pexels-cleyder-duque-6401325.jpg" alt="First Sticker">
+        <img class="sample" src="#" id="uploadedImage" alt="First Sticker">
 
         </div>
 
@@ -123,3 +123,4 @@
 </body>
 
 </html>
+
