--- a/generate.html
+++ b/generate.html
@@ -46,13 +46,14 @@
     <script src="gen.js"></script>
 
     <!-- In generate.html, add before </body> -->
-<script src="api-integration.js"></script>
+<!-- <script src="api-integration.js"></script>
 <script>
     // Connect your upload button to the API
     document.getElementById('upfiles').addEventListener('click', handleUploadSubmit);
-</script>
+</script> -->
     
 </body>
 
 </html>
+
 
